# auto-api-python

./: .cursorrules  .gitattributes  AGENTS.md  CLAUDE.md  README.md  llms.txt  pyproject.toml
.github/: copilot-instructions.md
auto_api/: __init__.py  client.py  errors.py
examples/: example.py
tests/: test_client.py  test_errors.py
