[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoapi-client"
version = "1.0.0"
description = "auto-api.com client — search car listings across encar, mobile.de, autoscout24, che168 and more"
requires-python = ">=3.7"
license = "MIT"
authors = [{name = "AUTO-API.COM", email = "access@auto-api.com"}]
keywords = ["auto-api", "api-client", "car-listings", "encar", "mobile-de", "autoscout24", "car-auction", "scraper", "encar api", "mobile.de api", "autoscout24 api", "che168 api", "dongchedi api", "guazi api", "dubicars api", "dubizzle api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.28"]
readme = "README.md"

[project.urls]
Homepage = "https://auto-api.com"
Documentation = "https://auto-api.com"
